# burn-contract

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md
scripts/: build.sh  deploy.sh
src/: external.rs  ft_callback.rs  lib.rs  private.rs  types.rs
